--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         data-sizing="px"
       />
       <label for="base">Base Color:</label>
-      <input id="base" type="color" name="base" value="10" />
+      <input id="base" type="color" name="base" value="#ffc600" />
     </div>
-    <img src="10.jpg" width="1500" />
+    <img src="10.jpg" width="1400" />
     <script src="app.js"></script>
   </body>
 </html>
